[package]
name = "pisirc"
version = "0.1.1"
edition = "2024"
authors = ["HealonBet <healonbet@hotmail.com>"]
description = "Pi si rc."
readme = "README.md"
homepage = "https://github.com/HealonBet/pisirc"
repository = "https://github.com/HealonBet/pisirc"
license = "MIT"
keywords = ["pisi"]
include = ["data/02.bin", "data/af.bin"]

[dependencies]
